2003-01-14  Theodore A. Roth  <troth@openavr.org>

	* doc/TODO: Sync http refs up with new archive.

2003-01-14  Theodore A. Roth  <troth@openavr.org>

	* include/avr/iom169.h: Fix typo (TCNT9 -> TCNT0).
	* include/avr/iom64.h: Fix typo (For TCCR0, CS1n -> CS0n).

2003-01-14  Theodore A. Roth  <troth@openavr.org>

	* ChangeLog: Moved 2002 entries to ChangeLog-2002.
	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* libm/fplib/Makefile.am (EXTRA_DIST): Remove readme.atan2.

2003-01-13  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* include/avr/sleep.h: Clear MCUCR before setting the new mode.
	(Thanks to Volkmar Dierkes for catching this bug.)

2003-01-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.in: add __COMPILING_AVR_LIBC__, drop use of fake
		-mmcu devices when assembling, use avr[2..5] instead.
	* include/avr/eeprom.h: mention this to be n/a for ATmega169.
	* include/avr/io.h: move the common register declarations here;
		explain the details about the inclusion of <avr/ioXXX.h>.
	* include/avr/io1200.h: remove common register declarations.
	* include/avr/io2313.h: ditto.
	* include/avr/io2323.h: ditto.
	* include/avr/io2333.h: ditto.
	* include/avr/io2343.h: ditto.
	* include/avr/io4414.h: ditto.
	* include/avr/io4433.h: ditto.
	* include/avr/io4434.h: ditto.
	* include/avr/io76c711.h: ditto.
	* include/avr/io8515.h: ditto.
	* include/avr/io8534.h: ditto.
	* include/avr/io8535.h: ditto.
	* include/avr/ioat94k.h: ditto.
	* include/avr/iom103.h: ditto.
	* include/avr/iom128.h: ditto.
	* include/avr/iom16.h: ditto.
	* include/avr/iom161.h: ditto.
	* include/avr/iom162.h: ditto.
	* include/avr/iom163.h: ditto.
	* include/avr/iom169.h: ditto.
	* include/avr/iom32.h: ditto.
	* include/avr/iom323.h: ditto.
	* include/avr/iom64.h: ditto.
	* include/avr/iom8.h: ditto.
	* include/avr/iom8515.h: ditto.
	* include/avr/iom8535.h: ditto.
	* include/avr/iotn11.h: ditto.
	* include/avr/iotn12.h: ditto.